--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover"
   />
+  <script type="text/javascript" src="//assets.zjzwfw.gov.cn/assets/ZWJSBridge/1.0.1/zwjsbridge.js"></script>
+  <script>
+    (function (w, d, s, q, i) {
+      w[q] = w[q] || [];
+      var f = d.getElementsByTagName(s)[0], j = d.createElement(s);
+      j.async = true;
+      j.id = 'beacon-aplus';
+      j.src = 'https://d.alicdn.com/alilog/mlog/aplus.js?id=202951085';
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'aplus_queue');
+    window.aplus_queue.push({
+      action: 'aplus.setMetaInfo', arguments: ['aplus-rhost-v', 'alog.zjzwfw.gov.cn'],
+    });
+    window.aplus_queue.push({
+      action: 'aplus.setMetaInfo', arguments: ['aplus-rhost-g', 'alog.zjzwfw.gov.cn'],
+    });
+    // 这个会落到 app_key 字段上
+    window.aplus_queue.push({
+      action: 'aplus.setMetaInfo', arguments: ['appId', '60506758'],
+    });
+  </script>
   <title>办事指南</title>
 </head>
 <body>
